fix button spacing on solution
original solution does not match given solution perfectly

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -87,4 +87,5 @@ button.cancel {
 
 .button-group {
   display: flex;
+  gap: 8px;
 }
